--- a/src/Components/Projects/ProjectsItems.css
+++ b/src/Components/Projects/ProjectsItems.css
@@ -93,3 +93,33 @@
 .star-link {
   margin-top: 1rem;
 }
+
+@media screen and (max-width: 768px) {
+  .test {
+    display: flex;
+  }
+
+  .work-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding-bottom: 2.5rem;
+  }
+
+  .work-container .work-box {
+    margin-bottom: 1rem;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .work-container {
+    display: grid;
+    grid-template-columns: 0.9fr;
+    margin-left: 9rem;
+    align-items: center;
+    gap: 3rem;
+  }
+
+  .work-box img {
+    height: 24rem;
+  }
+}
