--- a/src/Components/Home/Header.css
+++ b/src/Components/Home/Header.css
@@ -141,6 +141,7 @@ h3.profession {
   .homeSection {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     padding: 0px 20px;
   }
 
