--- a/src/Components/Projects/Search&Filter.css
+++ b/src/Components/Projects/Search&Filter.css
@@ -99,7 +99,7 @@
     flex-direction: column;
     text-align: left;
     position: absolute;
-    top: 366%;
+    margin-top: 90%;
     left: 3%;
     height: 30vh;
     background-color: var(--first-bg-color);
@@ -159,7 +159,7 @@
     flex-direction: column;
     text-align: left;
     position: absolute;
-    top: 366.5% !important;
+    margin-top: 90%;
     left: 0;
     height: 30vh;
     background-color: var(--first-bg-color);
@@ -224,6 +224,7 @@
     flex-direction: column;
     text-align: left;
     position: absolute;
+    margin-top: 90%;
     left: 10rem;
     height: 30vh;
     background-color: var(--first-bg-color);
