--- a/src/Components/Home/Header.css
+++ b/src/Components/Home/Header.css
@@ -99,11 +99,11 @@ h3.profession {
 
 @media screen and (max-width: 330px) {
   .homeSection .btns {
-    padding: 0.8rem 0.8rem;
+    padding: 0.7rem;
   }
 
   .btn-download {
-    margin-right: 0.7rem !important;
+    margin-right: 0.5rem !important;
   }
 }
 
